updated to Java 22