@@ -3,17 +3,18 @@ package mediamatrix.classloader;
 import mediamatrix.utils.FileNameUtilities;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 
 public class ClassUtilities {
-    
+
     public ClassUtilities() {
     }
-    
+
     public static String pathToFullyQualifiedName(String classpath, String path) {
         char[] buff = new char[path.length()];
-        String fqname = null;
-        
+        String fqname;
+
         for (int i = 0; i < buff.length; i++) {
             if (path.charAt(i) == '/' || path.charAt(i) == '\\') {
                 buff[i] = '.';
@@ -21,7 +22,7 @@ public class ClassUtilities {
                 buff[i] = path.charAt(i);
             }
         }
-        
+
         int classpathLength = 0;
         if (classpath != null) {
             classpathLength = classpath.length() + 1;
@@ -30,13 +31,12 @@ public class ClassUtilities {
         fqname = new String(buff, classpathLength, classNameLength);
         return fqname;
     }
-    
-    
+
     public static boolean isSubclassOf(Class<?> targetClass, Class<?> baseClass) {
         for (Class<?> clazz = targetClass; clazz != null; clazz = clazz.getSuperclass()) {
             Class<?>[] interfaces = clazz.getInterfaces();
-            for (int i = 0; i < interfaces.length; i++) {
-                if (interfaces[i].equals(baseClass)) {
+            for (Class<?> intf : interfaces) {
+                if (intf.equals(baseClass)) {
                     return true;
                 }
             }
@@ -44,15 +44,14 @@ public class ClassUtilities {
                 return true;
             }
         }
-        
+
         return false;
     }
-    
-    
+
     public static URL[] convertJarFilesToURLs(File[] jars) throws IOException {
         URL[] urls = new URL[jars.length];
-        for (int i = 0 ; i < jars.length ; i++) {
-            urls[i] = new URL("jar:" + FileNameUtilities.toURL(jars[i].getCanonicalFile()).toString() + "!/");
+        for (int i = 0; i < jars.length; i++) {
+            urls[i] = URI.create("jar:" + FileNameUtilities.toURL(jars[i].getCanonicalFile()).toString() + "!/").toURL();
         }
         return urls;
     }
