@@ -2,6 +2,7 @@ package mediamatrix.utils;
 
 import java.awt.image.BufferedImage;
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import javax.imageio.ImageIO;
 import mediamatrix.munsell.ColorHistogram;
@@ -11,7 +12,7 @@ import mediamatrix.munsell.Correlation;
 public class ImageMetadataSnippet {
 
     public static void main(String[] args) throws Exception {
-        final BufferedImage image = ImageIO.read(new URL("http://www.zarasu.com/f/tfsafe.cgi/lzh/bg_sky/sky0012.jpg"));
+        final BufferedImage image = ImageIO.read(URI.create("http://www.zarasu.com/f/tfsafe.cgi/lzh/bg_sky/sky0012.jpg").toURL());
         final ColorImpressionKnowledge ci = new ColorImpressionKnowledge();
         ci.load(new File("C:/Users/shuichi/AppData/Local/MediaMatrix/ColorImpression/CIS2.csv"), "UTF-8");
         final ColorHistogram histogram = ci.generateHistogram(image);
